# alpha-zero-nano

./: CLAUDE.md  OPTIMIZATIONS.md  README.md  STRATEGY.md  az-play-connect4.ipynb  az-tictactoe.ipynb  az-train-chess.ipynb  az-train-tictactoe.ipynb  benchmark.py  pyproject.toml
.claude/: settings.json
.github/workflows/: deploy-web.yml
chess_game/: chess_game.py  test_chess_encoding.py  test_chess_game.py  test_rust_mcts_fixtures.py  test_rust_parity_fixtures.py
connect4/: __init__.py  connect4.py  test_connect4.py
design/: RUST_PORT_PLAN.md
mcts/: mcts.py  test_mcts_chess.py  test_mcts_tictactoe.py
model/: model.py  test_model_chess.py  test_model_tictactoe.py
rust/: .gitignore  Cargo.toml
rust/src/: action.rs  encoding.rs  game.rs  inference.rs  lib.rs  mcts.rs  selfplay.rs  shards.rs
rust/tests/: action_unit.rs  batcher_parity.rs  diag_mcts.rs  encoding_unit.rs  inference_parity.rs  mcts_onnx_smoke.rs  mcts_parity.rs  parity.rs  selfplay_smoke.rs  shards_roundtrip.rs
rust/tests/fixtures/: chess_parity.json  mcts_parity.json
tictactoe/: test_tictactoe.py  tictactoe.py
tools/: export_chess_onnx.py  export_for_web.py  gen_agreement_data.py  gen_inference_parity_fixtures.py  gen_mcts_parity_fixtures.py  gen_rust_parity_fixtures.py  test_export_chess_onnx.py
train/: common.py  run_training.py  run_training_chess_rust.py  shards.py  test_run_training.py  test_run_training_chess_rust.py  test_shards.py  test_train_chess.py  test_train_tictactoe.py  train.py
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: weights.json
web/src/: connect4.ts  main.ts  mcts.ts  model.ts  style.css
web/tools/: agreement_test.ts  mcts_smoke.ts
