[project]
name = "alpha-zero-nano"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
    "numpy>=2.4.1",
    "torch>=2.0.0",
    "matplotlib>=3.0.0",
    "chess>=1.11.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
