[project]
name = "alpha-zero-nano"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
    "numpy>=2.4.1",
    "torch>=2.0.0",
    "matplotlib>=3.0.0",
    "chess>=1.11.2",
    "jupyter>=1.1.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tictactoe", "chess_game", "connect4", "mcts", "model", "train"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
]
