[package]
name = "alpha_zero_nano"
version = "0.1.0"
edition = "2021"
description = "Rust port of the AlphaZero-nano chess hot path (Phase 0+1: encoder + game)"

[dependencies]
shakmaty = "0.27"
thiserror = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"

[profile.release]
lto = "thin"
codegen-units = 1
